made application mobile friendly with media queries and updated the README file with a live server URL and fixed some extra spacing in README file

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ textarea {
   .toast {
     background-color: white;
     width: 80vw;
-    top: 8%;
+    top: 6rem;
     left: 5%;
   }
 }
